# agente-plug

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD_G2_EDUCACAO.md  PRD_NexoIA_v3.docx  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/.github/workflows/: deploy.yml
apps/api/migrations/: env.py
apps/api/migrations/migrations/: env.py
apps/api/migrations/versions/: 10e0eb158b4d_meta_template_media_table.py  1d898ca7cc45_product_aliases_and_unmatched.py  231efcec8acf_add_chatnexo_agents.py  27a1ce6ae065_initial_schema.py  2c5504aac687_add_trigger_event_type_to_flows.py  3e4f5a6b7c8d_onboarding_steps_cascade.py  42c2b623d919_rename_courses_to_products.py  4fce596ca642_add_missing_lead_indices.py  5a315d3321ab_rename_divergent_hubla_event_types.py  64664593d802_rename_delay_hours_to_minutes.py  657de6865172_create_kb_tables.py  83ff9745e1a6_create_hubla_events_and_leads.py  8bdd77da3217_rename_followup_to_onboarding.py  995e17c86849_add_access_case_reactive_fields.py  9f07c98d5b22_step_delay_relative_and_position_one_.py  a1b2c3d4e5f6_normalize_hubla_event_type_names.py  a1b2c3d4e5f6_seed_initial_admin_user.py  a1b2c3d4e5f7_followup_engine_v2.py  a2b3c4d5e6f7_add_followup_tables.py  a4b5c6d7e8f9_meta_templates_timestamps.py  a7b8c9d0e1f2_seed_default_profiles.py  a9b0c1d2e3f4_audit_events_expand.py  aa01_multitenant_identities_memberships.py  b1c2d3e4f5a6_create_users_and_smtp_config.py  b3c4d5e6f7a8_fix_followup_enrollment_conversation_id.py  b5c6d7e8f9a0_dynamic_followup_by_course.py  c1d2e3f4a5b6_seed_g2_courses.py  c2d3e4f5a6b7_seed_guilherme_operator.py  c3d4e5f6a7b8_platform_config.py  c4d5e6f7a8b9_add_token_prefix_to_api_tokens.py  d1e2f3a4b5c6_followup_step_message_text.py  d5e1f2a3b4c5_add_conversation_messages_table.py  (+8 more)
apps/api/scripts/: seed_loja_express.py  seed_products.py
apps/api/src/: main.py  worker.py
apps/api/src/agent/: context.py  (+11 more)
apps/api/tests/: factories.py
(+1055 files in other folders)
