[project]
name = "nexoia"
version = "0.1.0"
description = "NexoIA agent backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "pgvector>=0.3",
  "alembic>=1.14",
  "redis>=5.2",
  "openai>=1.54",
  "httpx>=0.27",
  "structlog>=24.4",
  "prometheus-client>=0.21",
  "cryptography>=43",
  "tenacity>=9.0",
  "pypdf>=6.10.2",
  "python-docx>=1.2.0",
  "tiktoken>=0.12.0",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.13",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "testcontainers[postgres,redis]>=4.8",
  "factory-boy>=3.3",
  "freezegun>=1.5",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/shared", "src/interface"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: tests hitting real services (PG/Redis)",
  "e2e: full stack tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "agent.skill_loader",
  "agent.prompt",
  "agent.guards.*",
  "agent.skills.*",
  "pgvector.*",
]
ignore_errors = true
ignore_missing_imports = true

# redis-py async stubs produce false-positive misc/no-any-return errors
[[tool.mypy.overrides]]
module = ["shared.adapters.redis.*"]
ignore_errors = true
